# http-auth-middleware

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  compose.wac  compose.yaml  compose.yml  handler.wat  login.html  spin.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
adapter/: wasi_snapshot_preview1.reactor.wasm
demo/: Cargo.toml  spin.toml
demo/src/: lib.rs
example/: Cargo.toml  README.md  build.sh  spin.toml  wadm.yaml  wasmcloud.toml
example-app/: Cargo.toml
example-app/src/: lib.rs
example-app/src/sdk/: http.rs
example/src/: lib.rs
github-oauth/: Cargo.toml
github-oauth/src/: api.rs  build.rs  lib.rs  response.rs
github-oauth/src/api/: authenticate.rs  authorize.rs  callback.rs  login.rs
github-oauth/src/sdk/: http.rs
github-oauth/wit/: world.wit
github-oauth/wits/: main.wit
python-example/: README.md  app.py  spin.toml
python-example/componentize_py_runtime/: __init__.py
python-example/http_app/: __init__.py
python-example/http_app/exports/: __init__.py  incoming_handler.py
python-example/http_app/imports/: poll.py  streams.py  types.py
python-example/wit/: world.wit
src/: api.rs  lib.rs
src/api/: authenticate.rs  authorize.rs  login.rs
wit/: world.wit
