[package]
name = "http-handler"
authors = ["Brian H <brian.hardock@fermyon.com>"]
description = "A simple HTTP handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }

[workspace]

[package.metadata.component]
package = "demo:http-handler"