[package]
name = "example-app"
description = "A simple HTTP handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = { workspace = true }

[dependencies.wit-bindgen]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "d73c073b"

[dependencies.wit-bindgen-rt]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "d73c073b"
