[package]
name = "github-oauth"
description = "An HTTP authentication middleware component."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cookie = "0.18"
futures = "0.3.28"
http = "1.0"
json = "0.12.4"
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs", rev = "c74aec9", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { workspace = true }
spin-executor = { workspace = true }
url = "2.4.0"
wit-bindgen = "0.16.0"

[features]
# Inject oauth credentials environment variables at compile time rather than runtime
compile-time-secrets = []